<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buchtajosef.simpletimesheet.TabTools"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/tab_tools_button_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_button_backup"
            android:layout_centerInParent="true"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"/>

        <Button
            android:id="@+id/tab_tools_button_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_button_export"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"
            android:layout_above="@id/tab_tools_button_backup"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/tab_tools_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_button_restore"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textColor="@drawable/text_selector"
            android:background="@drawable/button_selector"
            android:layout_below="@id/tab_tools_button_backup"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>
</FrameLayout>
