<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_time_in"
        android:gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">
        <NumberPicker
            android:id="@+id/additionalTime_hourIn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            android:descendantFocusability="blocksDescendants"/>
        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/layout_time_separator"
            android:textColor="@android:color/black"/>
        <NumberPicker
            android:id="@+id/additionalTime_minuteIn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            android:descendantFocusability="blocksDescendants" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/layout_time_out"
        android:gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/additionalTime_hourOut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            android:descendantFocusability="blocksDescendants"/>
        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/layout_time_separator"
            android:textColor="@android:color/black"/>
        <NumberPicker
            android:id="@+id/additionalTime_minuteOut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleX="2"
            android:scaleY="2"
            android:descendantFocusability="blocksDescendants"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/additionalTime_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_description"
            android:gravity="center"/>
        <EditText
            android:id="@+id/additionalTime_description"
            android:layout_below="@id/additionalTime_description_label"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="120dp"/>
    </RelativeLayout>
</LinearLayout>