<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="80dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:background="@color/colorPrimary"
            android:text="@string/layout_time_in"
            android:gravity="center"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">
            <NumberPicker
                android:id="@+id/additionalTimeRow_hourIn"
                android:layout_width="39dp"
                android:layout_height="60dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:descendantFocusability="afterDescendants"/>
            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/layout_time_separator"
                android:textColor="@android:color/black"/>
            <NumberPicker
                android:id="@+id/additionalTimeRow_minuteIn"
                android:layout_width="39dp"
                android:layout_height="60dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:descendantFocusability="afterDescendants" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="80dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:background="@color/colorPrimary"
            android:text="@string/layout_time_out"
            android:gravity="center"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <NumberPicker
                android:id="@+id/additionalTimeRow_hourOut"
                android:layout_width="39dp"
                android:layout_height="60dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:descendantFocusability="blocksDescendants"/>
            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/layout_time_separator"
                android:textColor="@android:color/black"/>
            <NumberPicker
                android:id="@+id/additionalTimeRow_minuteOut"
                android:layout_width="39dp"
                android:layout_height="60dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:descendantFocusability="blocksDescendants"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/layout_description"
            android:textColor="@color/colorText"
            android:gravity="center"/>
        <TextView
            android:id="@+id/additionalTimeRow_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>